frontend/assets/css/index.scss
body {
  font-family: Lato, Helvetica Neue, Arial, Helvetica, sans-serif;
  margin: 0;
  padding: 0;
}

// colors
$color0: #010204;
$color1: #335284;
$color2: #527b9b;
$color3: #9fb1bf;
$color4: #c3cdd7;
$color5: #e4e9ec;

$white: #fff;
$light-grey: rgba(0, 0, 0, .05);
$oil: rgba(0, 0, 0, .87);

// media queries
$medium-up: 'only screen and (min-width : 640px)' !default;
$large-up: 'only screen and (min-width : 1024px)' !default;
$xlarge-up: 'only screen and (min-width : 1440px)' !default;
$xxlarge-up: 'only screen and (min-width : 1800px)' !default;

$medium-down: 'only screen and (max-width : 639px)' !default;
$large-down: 'only screen and (max-width : 1023px)' !default;
$xlarge-down: 'only screen and (max-width : 1439px)' !default;

@import './fontello';

.modal {
  .ui.loader.active {

    ::before {
      // https://github.com/Semantic-Org/Semantic-UI-React/issues/3133
      border-color: $color5 !important;
    }

    ::after {
      border-color: $color2 transparent transparent !important;
    }
  }
}

#__next {

  $topbar-height: 60px;
  $footer-height: 90px;
  $padding-main: 30px;

  $sidebar-width: 260px;
  $sidebar-offset: 60px;

  height: 100%;

  > nav {
    background-color: $color0;
    border-radius: 0;
    height: $topbar-height;
    margin: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 100;

    .item {

      img {
        height: 2.5rem;
        width: auto;
      }
    }

    .menu-settings {
      min-width: 150px;

      .dropdown {
        justify-content: center;
        width: 100%;

        a {
          color: $oil;
        }

        .text {
          display: flex;
        }

        .item {
          align-items: center;
          display: flex;
        }
      }
    }
  }

  > main {
    min-height: calc(100vh - #{$footer-height});
    padding-top: $topbar-height;

    > div {
      padding-top: $padding-main;
    }
  }

  > footer {
    background-color: $color0;
    clear: both;
    color: $color3;
    display: flex;
    flex-flow: column;
    height: $footer-height;
    justify-content: space-around;
    padding: 5px 10px;
    position: relative;
    z-index: 200;

    ul {
      list-style: none;
      margin: 0;
      padding: 0;

      li {
        display: inline-block;
        margin-right: 2rem;

        &:last-of-type {
          margin-right: 0;
        }
      }

      a {
        color: $color3;
      }
    }
  }

  .no-results {
    margin-top: 10vh;
    width: 100%;

    button {
      margin-top: 50px;
    }
  }

  .breadcrumb {
    margin: 1.5rem 0 3rem;
  }

  .item-list {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;

    > .padding-item {
      height: 0;
    }

    > .item,
    > .padding-item {
      flex: 1 1 250px;
      margin: 1rem;
    }
  }

  .homepage {
    background-color: $color0;
    color: $color5;
    margin: 0;
    min-height: calc(100vh - #{$topbar-height} - #{$footer-height});
    text-align: center;
    width: 100%;

    .logo {
      height: 20vh;
      margin: auto;
    }

    h1 {
      font-size: 3rem;
      letter-spacing: .5rem;

      @media #{$medium-down} {
        font-size: 2rem;
        letter-spacing: normal;
      }
    }

    h2 {
      font-size: 1.5rem;
      line-height: 2.5rem;

      @media #{$medium-down} {
        font-size: 1rem;
        line-height: 1.5rem;
      }
    }

    .header {
      color: $color4;
    }

    .carousel {
      img {
        transition: transform .2s;

        &:hover {
          transform: scale(1.05);
          transform-origin: 50%;
          z-index: 10;
        }
      }
    }
  }

  .inventory {
    h2 {
      margin-top: 60px;
    }
  }

  .skin-list {
    margin-bottom: 30px;
    padding: 0 20px;

    .inventory-link {
      margin-bottom: 40px;
      text-align: right;
    }

    .item-list {
      .skin {
        .header {
          a {
            color: $color0;
          }
        }

        img {
          background-color: $light-grey;
          cursor: pointer;
        }

        .stattrak,
        .souvenir {
          position: absolute;
          right: 5px;
          top: 5px;
        }

        .extra.content {
          height: 100px;
          overflow: hidden;

          .prices {
            display: flex;
            flex-flow: row wrap;

            .price {
              width: 50%;
            }
          }
        }
      }
    }

    .loader {
      margin-top: 10vh;
      z-index: 1;
    }
  }

  .skin-list-container {

    .skin-list-filter-container {
      background-color: $color0;
      overflow-x: hidden;
      top: $topbar-height;
      width: $sidebar-width;

      .expand-icon {
        display: none;
      }

      .fields {
        display: flex;
        flex-flow: column;
        padding: 10px;
        width: $sidebar-width;

        .field {
          margin: 10px 0;

          label {
            color: $white !important;
          }
        }
      }
    }

    .skin-list {
      margin-left: $sidebar-width;
      width: calc(100% - #{$sidebar-width});
    }

    @media #{$large-down} {
      .skin-list-filter-container {
        margin-left: -#{$sidebar-width} !important;
        transition: margin-left .2s;
        width: $sidebar-width + $sidebar-offset;

        .fields {
          padding-right: 0;
        }

        .expand-icon {
          color: $white;
          cursor: pointer;
          display: block;
          font-size: 20px;
          height: $sidebar-offset;
          line-height: $sidebar-offset;
          margin: 0;
          position: fixed;
          right: 0;
          text-align: center;
          top: 0;
          transition: transform .2s;
          width: $sidebar-offset;
          z-index: 100;
        }

        &.active {
          margin-left: 0 !important;

          .expand-icon {
            transform: rotate(180deg);
          }
        }
      }

      .skin-list {
        margin-left: 60px;
        width: calc(100% - 60px);
      }
    }
  }

  .skin-page {
    margin: auto;
    max-width: 1800px;
    padding-bottom: 30px;

    .skin-image {
      margin: 30px auto 0;
      max-width: 500px;

      img {
        max-width: 100%;
      }
    }

    .select-quality {
      align-items: center;
      display: flex;
      flex-flow: row wrap;
      justify-content: center;
      margin-top: 10px;
      text-align: center;

      > div {
        background-color: $color2;
        border-radius: 4px;
        color: $white;
        cursor: pointer;
        font-size: .9rem;
        margin-bottom: .5rem;
        margin-right: .5rem;
        padding: .2rem .5rem;

        &.active {
          background-color: $color1;
        }

        &:last-of-type {
          margin-right: 0;
        }
      }
    }

    .left-panel,
    .right-panel {
      h3 {
        margin-top: 30px;
      }
    }

    .main-content {
      align-items: center;
      display: flex;
      flex-flow: column;
      justify-content: flex-start;

      .panels {
        align-items: flex-start;
        display: flex;
        flex-flow: row wrap;
        justify-content: center;

        .left-panel,
        .right-panel {
          margin: 0 10px;
        }

        .left-panel {
          flex: 1 1 380px;
        }

        .right-panel {
          flex: 1 0 auto;

          table {
            display: block;
            max-width: calc(100vw - 40px);
            overflow-x: auto;

            thead tr th:first-child {
              width: 100%;
            }
          }
        }
      }

      .bottom-panel {
        padding: 0 10px;
        width: 100%;

        h3 {
          margin-top: 30px;
        }

        .prices-history {
          width: 100%;

          .options {
            display: flex;
            flex-flow: row wrap;
            justify-content: flex-start;

            .fields {
              flex-flow: column;
              margin-right: 30px;

              .field:first-of-type {
                margin-bottom: 10px;
              }

              .field:last-of-type {
                margin-bottom: 15px;
              }
            }

            .skins {
              width: 300px;
            }
          }
        }
      }
    }
  }

  .team-list {
    .team {
      .reveal .visible.content {
        background: $white;
        text-align: center;
        width: 100%;
      }

      img {
        background: $white;
        padding: 5px;
      }

      .list {
        display: flex;
        flex-flow: column;
        justify-content: center;
        padding: 5px;
      }
    }

    .disclaimer {
      font-style: italic;
    }
  }

  .contact-form {
    .grecaptcha-badge {
      margin-bottom: 1rem;
    }
  }

  .page {
    padding-bottom: 40px;

    .header {
      .inline-header {
        display: flex;
        flex-flow: row;

        h1 {
          margin-right: 20px;
        }
      }

      .sub.header {
        line-height: 1.7rem;
        margin-bottom: 50px;
        margin-top: 15px;
      }
    }

    .admin-actions {
      float: right;
      margin-top: $padding-main;
    }

  }

  a {
    outline: none;
  }
}

.login-modal {
  .content {
    text-align: center;
  }
}

.list-management-modal {
  .details-icon {
    text-align: right;

    i {
      margin-left: 5px;
    }
  }

  .no-items {
    font-weight: 500;
    text-align: center;
  }
}

